@@ -1,3 +1,7 @@
+1999-08-31  Jochen Wiedmann  <joe@ispsoft.de> (0.1134)
+
+	* lib/HTML/EP/Install.pm: Added InstallFiles and InstallCgiFiles.
+
 1999-08-27  Jochen Wiedmann  <joe@ispsoft.de> (0.1133)
 
 	* lib/HTML/EP/Session.pm: Added support for multiple sessions.
